--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://palkaz.github.io/djedaj-cod-ice-next",
+  "homepage": "https://github.com/BogdanKaleniuk/djedaj-cod-icecream",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /djedaj-cod-ice-next/"
